--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@
 @import 'tailwindcss/utilities';
 
 * {
-font-family: "Open Sans", sans-serif;
+font-family: "Lato", sans-serif;
 box-sizing: border-box;
 }
 
